# duende

./: .cargo-mutants.toml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml
.github/workflows/: book.yml
book/: book.toml
book/src/: SUMMARY.md  api.md  configuration.md  examples.md  getting-started.md  health.md  introduction.md  iron-lotus.md  lifecycle.md  mlock.md  observability.md  platforms.md  resources.md  toyota-way.md  troubleshooting.md
crates/duende-core/: Cargo.toml  README.md
crates/duende-core/src/: adapter.rs  config.rs  daemon.rs  error.rs  lib.rs  manager.rs  metrics.rs  platform.rs  types.rs
crates/duende-core/src/adapters/: container.rs  launchd.rs  mod.rs  native.rs  pepita.rs  systemd.rs  wos.rs
crates/duende-core/src/tests/: falsification.rs  harness.rs  health.rs  lifecycle.rs  mocks.rs  mod.rs  observability.rs  platform.rs  resource.rs  signal.rs
crates/duende-mlock/: Cargo.toml  README.md
crates/duende-mlock/examples/: test_lock.rs
crates/duende-mlock/src/: config.rs  error.rs  lib.rs  status.rs  unix.rs  unsupported.rs
crates/duende-observe/: Cargo.toml  README.md
crates/duende-observe/src/: error.rs  health.rs  lib.rs  monitor.rs  tracer.rs
crates/duende-platform/: Cargo.toml  README.md
crates/duende-platform/src/: adapter.rs  container.rs  detect.rs  error.rs  lib.rs  linux.rs  macos.rs  memory.rs  native.rs  pepita.rs  wos.rs
crates/duende-policy/: Cargo.toml  README.md
crates/duende-policy/src/: circuit_breaker.rs  error.rs  gate.rs  jidoka.rs  lib.rs  limiter.rs
crates/duende-test/: Cargo.toml  README.md
crates/duende-test/src/: chaos.rs  error.rs  harness.rs  lib.rs  load.rs
crates/duende-test/tests/: falsification.rs
crates/duende-test/tests/falsification_tests/: lifecycle.rs  mod.rs  observability.rs  platform.rs  policy.rs  resources.rs
crates/duende-ublk/: Cargo.toml  README.md
crates/duende-ublk/examples/: cleanup.rs
crates/duende-ublk/src/: control.rs  error.rs  lib.rs  sys.rs
docker/: Dockerfile.mlock-test
docs/: container-mlock.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: daemon-tools-spec.md
examples/: daemon.rs  mlock.rs
src/: lib.rs
