[package]
name = "duende-mlock"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["PAIML <contact@paiml.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/duende"
documentation = "https://docs.rs/duende-mlock"
description = "Memory locking for swap-critical daemons (DT-007: Swap Deadlock Prevention)"
keywords = ["mlock", "daemon", "swap", "memory", "deadlock"]
categories = ["os", "memory-management"]
readme = "README.md"

[features]
default = []
# Enable nix for additional Unix utilities (optional)
nix = ["dep:nix"]

[dependencies]
# Core: Only libc for syscalls - minimal dependency tree
libc = "0.2"
# Optional: nix for higher-level Unix abstractions
nix = { version = "0.29", optional = true, default-features = false, features = ["mman"] }

[dev-dependencies]
# Property-based testing
proptest = "1.5"

[lints]
workspace = true
